--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>hello!</h1>
-				<p>i'm nullmiso, a student and artist from the <em>SF area</em>. <a href="/about">A short introduction...</a></p>
+				<p>i'm nullmiso, a student and artist from SF, california. <a href="/about">a short introduction</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
