--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>nullmiso</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">home</a></li>
-	        	<li><a href="/about">about</a></li>
-        		<li><a href="/works">works</a></li>
-        		<li><a href="/blog">blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>hello!</h1>
-				<p>i'm nullmiso, a student and artist from SF, california. <a href="/about">a short introduction</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:nullmiso@gmail.com">email</a></li>
-        		<li><a href="https://github.com/nullmiso">github.com/nullmiso</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: nullmiso
+---
+<div class="blurb">
+	<h1>hello!</h1>
+	<p><a href="/about">i'm a student and artist from SF, california.</a></p>
+</div><!-- /.blurb -->
