--- a/about/index.html
+++ b/about/index.html
@@ -5,3 +5,5 @@ title: about
 <div class="blurb">
 	<h1>no</h1>
 </div><!-- /.blurb -->
+<img src="images/lights.jpg"
+     alt="apartments at night, xiamen china">
