--- a/about/index.html
+++ b/about/index.html
@@ -5,5 +5,10 @@ title: about
 <div class="blurb">
 	<h1>no</h1>
 </div><!-- /.blurb -->
-<img src="images/lights.jpg"
-     alt="apartments at night, xiamen china">
+<div class="image">
+	<img src="images/lights.jpg"
+	     alt="apartments at night, xiamen china"
+	     width="300"
+	     height="400"
+	     title="lights.jpg">
+</div><!-- /.image -->
