--- a/works/index.html
+++ b/works/index.html
@@ -4,4 +4,5 @@ title: works
 ---
 <div class="blurb">
 	<h1>under construction</h1>
+	<p>check back later to see what i've been working on!</p>
 </div><!-- /.blurb -->
