--- a/about/index.html
+++ b/about/index.html
@@ -4,6 +4,7 @@ title: about
 ---
 <div class="blurb">
 	<h1>no</h1>
+	<p>coffee addict, takes good pictures, sketches nice things</p>
 </div><!-- /.blurb -->
 <div class="image">
 	<img src="images/lights.jpg"
