--- a/works/index.html
+++ b/works/index.html
@@ -6,3 +6,17 @@ title: works
 	<h1>under construction</h1>
 	<p>check back later to see what i've been working on!</p>
 </div><!-- /.blurb -->
+<div class="image">
+	<img src="images/xiamen01.jpg"
+	     alt="above the airport, xiamen china"
+	     width="1600"
+	     height="900"
+	     title="xiamen01.jpg">
+</div><!-- /.image -->
+<div class="image">
+	<img src="images/xiamen02.jpg"
+	     alt="luminous building, xiamen china"
+	     width="1600"
+	     height="900"
+	     title="xiamen02.jpg">
+</div><!-- /.image -->
