--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@ layout: default
 title: about
 ---
 <div class="blurb">
-	<h1>no</h1>
+	<h1>andrew</h1>
 	<p>coffee addict, takes good pictures, sketches nice things</p>
 </div><!-- /.blurb -->
 <div class="image">
