--- a/about/index.html
+++ b/about/index.html
@@ -3,13 +3,13 @@ layout: default
 title: about
 ---
 <div class="blurb">
-	<h1>andrew</h1>
-	<p>coffee addict, takes good pictures, sketches nice things</p>
-</div><!-- /.blurb -->
+	<h1>about / under construction</h1>
+	<p>andrew. coffee addict, takes good pictures, sketches nice things</p>
+</div> <!-- end div -->
 <div class="image">
 	<img src="images/lights.jpg"
 	     alt="apartments at night, xiamen china"
 	     width="450"
 	     height="600"
 	     title="lights.jpg">
-</div><!-- /.image -->
+</div><!-- end image -->
