--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@ title: nullmiso
 <div class="blurb">
 	<h1>你好!</h1>
 	<p><a href="/about">i'm a student and artist from SF, california.</a></p>
-</div><!-- /.blurb -->
+</div><!-- end blurb -->
