--- a/works/index.html
+++ b/works/index.html
@@ -3,19 +3,19 @@ layout: default
 title: works
 ---
 <div class="blurb">
-	<h1>under construction</h1>
-</div><!-- /.blurb -->
+	<h1>works / under construction</h1>
+</div><!-- end blurb -->
 <div class="image">
 	<img src="images/xiamen01.jpg"
 	     alt="above the airport, xiamen china"
 	     width="800"
 	     height="450"
 	     title="xiamen01.jpg">
-</div><!-- /.image -->
+</div><!-- end image -->
 <div class="image">
 	<img src="images/xiamen02.jpg"
 	     alt="luminous building, xiamen china"
 	     width="800"
 	     height="450"
 	     title="xiamen02.jpg">
-</div><!-- /.image -->
+</div><!-- end image -->
