--- a/works/index.html
+++ b/works/index.html
@@ -3,5 +3,5 @@ layout: default
 title: works
 ---
 <div class="blurb">
-	<h1>under construction</h1>
+	<h1>works / under construction</h1>
 </div><!-- /.blurb -->
