--- a/works/index.html
+++ b/works/index.html
@@ -7,7 +7,7 @@ title: works
 </div><!-- end blurb -->
 <div class="image">
 	<img src="images/xiamen01.jpg"
-	     alt="above the airport, xiamen china"
+	     alt="above xiamen airport, xiamen china"
 	     width="800"
 	     height="450"
 	     title="xiamen01.jpg">
