--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>nullmiso</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">HOME</a></li>
-	        	<li><a href="/about">ABOUT</a></li>
-        		<li><a href="/archive">ARCHIVE</a></li>
-        		<li><a href="/blog">BLOG</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>你好！</h1>
-				<p>trying this again...</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:nullmiso@gmail.com">email</a></li>
-        		<li><a href="https://github.com/nullmiso">github.com/nullmiso</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: nullmiso
+---
+<div class="blurb">
+	<h1>你好！</h1>
+	<p>trying this again...</a></p>
+</div><!-- /.blurb -->
