--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: nullmiso
 ---
 <div class="blurb">
 	<h1>你好！</h1>
-	<p>trying this again...</a></p>
+	<p>trying this again...</p>
 </div><!-- /.blurb -->
