--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Chalk | nullmiso</title>
+  <title>Home | nullmiso</title>
   <meta name="description" content="portfolio + blog">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -11,7 +11,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="http://chalk.nielsenramon.com/">
   <meta property="og:description" content="portfolio + blog">
-  <meta property="og:site_name" content="Chalk">
+  <meta property="og:site_name" content="nullmiso">
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:url" content="http://chalk.nielsenramon.com/">
@@ -23,18 +23,9 @@
     <meta name="twitter:image" content="http://chalk.nielsenramon.com/assets/og-image-ee46bbc61b334e821e81534b1fd43f3fee6f020ec174b3c2114445695fd48c01.jpg">
 
 
-  <link href="http://chalk.nielsenramon.com/feed.xml" type="application/rss+xml" rel="alternate" title="Chalk Last 10 blog posts" />
-
-
-
-
-
-
       <link rel="icon" type="image/x-icon" href="/assets/favicon-light-a98c41efc5ed9fcc06ac664c9e2f7a9b3c3b2e0a52357d221fe382f6f4abc8fc.ico">
       <link rel="apple-touch-icon" href="/assets/apple-touch-icon-light-87d1f2a3a19b1500e5c1626a0492025ca5f7f97d24540dc5900288e92112925a.png">
       <link rel="stylesheet" type="text/css" href="/assets/light-bb1553a18d0f1ccfe1aabc010584c49b4277a88503216b78906ba719e30019c1.css">
-
-
 
 
 </head>
@@ -44,7 +35,7 @@
     <div class="grid grid-centered">
       <div class="grid-cell">
         <nav class="header-nav scrollappear">
-  <a href="/" class="header-logo" title="Chalk">Chalk</a>
+  <a href="/" class="header-logo" title="nullmiso">nullmiso</a>
   <ul class="header-links">
 
       <li>
@@ -67,8 +58,6 @@
       </li>
 
 
-
-
       <li>
         <a href="https://github.com/nullmiso" rel="noreferrer noopener" target="_blank" title="GitHub">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon-github">
@@ -77,14 +66,6 @@
 
         </a>
       </li>
-
-
-
-
-
-
-
-
 
 
       <li>
@@ -106,12 +87,6 @@
 
         </a>
       </li>
-
-
-
-
-
-
 
 
       <li>
@@ -136,7 +111,6 @@
 
   </ul>
 </nav>
-
 
 
         <ul class="article-list">
@@ -241,7 +215,6 @@
 
 
   <script src="/assets/webfonts-96493456d319d1bf419afdf8701552d4d486fee6afd304897d4fd81eb4e0cc0b.js" type="text/javascript"></script>
-
 
 
   <script src="/assets/scrollappear-e2da8ea567e418637e31266cc5302126eaa79f62a2273739086358b589a89ee6.js" type="text/javascript"></script>
