--- a/index.html
+++ b/index.html
@@ -192,8 +192,7 @@
 
         <footer class="footer scrollappear">
   <p>
-    Chalk is a high quality, completely customizable, performant and 100% free
-    blog template for Jekyll built by
+    Chalk theme built by
     <a href="/about" title="About me">Nielsen Ramon</a>. Download it <a href="https://github.com/nielsenramon/chalk" rel="noreferrer noopener" target="_blank" title="Download Chalk">here</a>.
   </p>
 </footer>
