--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "The high quality, completely customizable, performant and 100% free blog template for Jekyll"
-description: "Chalk uses all the best tools and merges them into one premium blogging theme."
+title: "portfolio + blog"
+description: "an attempt to aggregate my artistic endeavors in one place"
 ---
 
 <ul class="article-list">
@@ -15,7 +15,7 @@ description: "Chalk uses all the best tools and merges them into one premium blo
       </a>
       <p>
         {% if post.description %}
-          {{ post.description }}  
+          {{ post.description }}
         {% else %}
           {{ post.excerpt }}
         {% endif %}
