--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@ title: "andrew"
 ---
 
 <div class="about {% if site.scrollappear_enabled %}scrollappear{% endif %}">
-  <img src="{% asset 'about.jpg' @path %}" alt="About Nielsen Ramon header image" />
+  <img src="{% asset 'about.jpg' @path %}" alt="Asilomar Beach, Monterey" />
   <h1>About me</h1>
   <p>
-    coffee addict, takes good pictures, sketches nice things.
+    Hello! I'm Andrew, class of 2025 computer science @ UCSB. I take good pictures & sketch nice things.
   </p>
 </div>
