--- a/about.html
+++ b/about.html
@@ -7,6 +7,6 @@ title: "andrew"
   <img src="{% asset 'about.jpg' @path %}" alt="Asilomar Beach, Monterey" />
   <h1>About me</h1>
   <p>
-    Hello! I'm Andrew, class of 2025 computer science @ UCSB. I take good pictures & sketch nice things.
+    Hello! I'm Andrew, class of 2025 computer science @ UCSB. I take pictures & sketch things.
   </p>
 </div>
